--- a/html/acao-corona-virus.html
+++ b/html/acao-corona-virus.html
@@ -12,7 +12,7 @@
         <link href="../css/galeria.css" rel="stylesheet">
         <script type="text/javascript" src="../js/galeria.js"></script>
             
-        <title>Eventos - Baggeto</title>
+        <title>SemiNovos - Baggeto</title>
 
     </head>
 
@@ -25,15 +25,14 @@
   <div class="column">
     <img src="../img/eventos/Ação Contra Corona Virus/img1.jpg" width="150px" height="150px" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
   </div>
-
   <div class="column">
-    <img src="../img/eventos/Ação Contra Corona Virus/img2.jpg" width="150px" height="150px" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+    <img src="../img/eventos/Ação Contra Corona Virus/img2.jpg" width="150px" height="150px" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
   </div>
-
   <div class="column">
-    <img src="../img/eventos/Ação Contra Corona Virus/img3.jpg" width="150px" height="150px" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+    <img src="../img/eventos/Ação Contra Corona Virus/img3.jpg" width="150px" height="150px" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
   </div>
   
+
 </section>
 
 
@@ -63,5 +62,6 @@
       <p id="caption"></p>
     </div>
     
+
 </body>
 </html>
