--- a/html/acao-corona-virus.html
+++ b/html/acao-corona-virus.html
@@ -12,7 +12,7 @@
         <link href="../css/galeria.css" rel="stylesheet">
         <script type="text/javascript" src="../js/galeria.js"></script>
             
-        <title>SemiNovos - Baggeto</title>
+        <title>Eventos - Baggeto</title>
 
     </head>
 
